force-app/main/default/objects/EndCustomerCampaign__c/EndCustomerCampaign__c.object-meta.xml
<CustomObject>
    <label>고객 캠페인</label>
    <nameField>
        <label>End Customer Campaign Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>