force-app/main/default/objects/EndCustomerCampaign__c/fields/BasicBenefits__c.field-meta.xml
<CustomField>
    <fullName>BasicBenefits__c</fullName>
    <label>Basic Benefits</label>
    <type>TextArea</type>
</CustomField>