force-app/main/default/objects/EndCustomerCampaign__c/fields/Discription__c.field-meta.xml
<CustomField>
    <fullName>Discription__c</fullName>
    <label>Discription</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>