force-app/main/default/objects/EndCustomerCampaign__c/fields/SpecialBenefits__c.field-meta.xml
<CustomField>
    <fullName>SpecialBenefits__c</fullName>
    <label>Special Benefits</label>
    <type>TextArea</type>
</CustomField>